--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "author": "cz",
   "license": "MIT",
   "scripts": {
-    "test": "mocha",
+    "test":
+      "jscover src lib-cov && JSCOV=1 mocha -R mocha-lcov-reporter > coverage/coverage.lcov",
     "lint": "eslint src/promize.js",
     "benchmark": "node ./benchmark/index"
   },
   "devDependencies": {
+    "coveralls": "^3.0.0",
     "eslint": "^4.10.0",
     "eslint-config-prettier": "^2.7.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-prettier": "^2.3.1",
+    "jscover": "^1.0.0",
     "mocha": "^4.0.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "prettier": "^1.8.2",
     "promises-aplus-tests": "^2.1.2",
     "webpack": "^3.8.1",
