--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: node_js
 node_js:
   - stable
+before_script:
+  - _JAVA_OPTIONS=
 after_script: "cat ./coverage/coverage.lcov | node_modules/.bin/coveralls"
