--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "test":
-      "jscover src lib-cov && JSCOV=1 mocha -R mocha-lcov-reporter > coverage/coverage.lcov",
+      "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec",
     "lint": "eslint src/promize.js",
     "benchmark": "node ./benchmark/index"
   },
@@ -18,7 +18,6 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-prettier": "^2.3.1",
-    "jscover": "^1.0.0",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "prettier": "^1.8.2",
@@ -26,5 +25,7 @@
     "webpack": "^3.8.1",
     "yaku": "^0.18.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "istanbul": "^0.4.5"
+  }
 }
